# agent-builder-tester

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  QUICKSTART.md  README.md  TODO.md  USERS_GUIDE.md  agents_studio.db  main.py  pyproject.toml  pyrefly.toml  run.sh
backend/: __init__.py  agents_studio.db  alembic.ini  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 20241014_add_content_to_execution_logs.py  627fe3ff9cdf_initial_migration.py  aee3db5aee50_add_users_table_for_authentication.py  b90a22f4a1f8_add_analytics_tables.py  d0ff6698417a_add_group_chat_tables.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: __init__.py  agent_templates.py  agents.py  analytics.py  auth.py  chat.py  group_chat.py  logs.py  websockets.py
backend/app/autogen_integration/: group_chat_manager.py
backend/app/core/: dependencies.py  security.py
backend/app/middleware/: __init__.py  analytics.py  rate_limit.py
backend/app/models/: __init__.py  agent.py  agent_template.py  analytics.py  conversation.py  execution_log.py  group_chat.py  mcp_server.py  user.py
backend/app/schemas/: __init__.py  agent.py  agent_template.py  analytics.py  chat.py  group_chat.py  log.py  (+1 more)
backend/tests/: conftest.py  test_agent_service.py  test_agent_templates.py  test_agent_test.py  test_agent_versions.py  test_analytics_service.py  test_auth.py  test_group_chat.py  test_log_service.py  test_rate_limit.py
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx
(+38 files in other folders)
